--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>p5.js example</title>
-  <link rel="stylesheet" href="./style.css">
-  <script src="../libraries/p5.min.js"></script>
-  <script src="../libraries/p5.dom.min.js"></script>
+  <link rel="stylesheet" href="./css/startPage.css">
+
 </head>
 
 <body>
+  <div id='start'>
+    <a href="#" class="btn btn--white btn--animated "> create new game </a>
+    <a href="#" class="btn btn--white btn--animated "> select game </a>
+  </div>
+
 </body>
 
 </html>
