--- a/client/src/pages/playGame.html
+++ b/client/src/pages/playGame.html
@@ -5,24 +5,41 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Play</title>
+  <link rel="stylesheet" href="../../libraries/bootstrab.css">
+
   <link rel="stylesheet" href="../css/playPage.css">
 
 </head>
 
 <body>
-  <div id="select-page">
+  <div id="play-page">
     <div class="left-part">
-      <ul class="list-group " id="game-name-list">
+      <button type="button" class="btn btn-dark btn-block  " id="PC">Play with Pc</button>
+      <button type="button" class="btn btn-dark btn-block  " id="DFS">solve dfs</button>
+      <button type="button" class="btn btn-dark btn-block  " id=BSF>solve bsf</button>
+      <button type="button" class="btn btn-dark btn-block  " id=U>Uinform</button>
 
-      </ul>
+      <button type="button" class="btn btn-dark btn-block  " id="A">solve A*</button>
+
+      <div class="action">
+
+        <button type="button" class="btn btn-dark btn-block" id="BACK">Back</button>
+
+        <div>
+          <span class='top T'></span>
+          <span class='right R'></span>
+          <span class='botton B'></span>
+          <span class='left L'></span>
+          <span class='C'></span>
+        </div>
+
+      </div>
+
     </div>
     <div class="right-part">
       <div class="border">
 
       </div>
-
-      <button type="button" class="btn btn-primary play disabled">Play</button>
-
     </div>
   </div>
 
@@ -30,6 +47,9 @@
   <script src="../js/API.js"></script>
   <script src="../../libraries/jquery.js"></script>
   <script src="../js/game.js"></script>
+
+  <script src="../js/solver.js"></script>
+
   <script src="../js/playGame.js"></script>
 </body>
 
